--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <img src="Images/blogAi.png" alt="Project 3">
                 <div class="project-info">
                     <h3>AI Blog Generator</h3>
-                    <p>AI-powered blog post generator</p>
+                    <p>I built a blog app with Lumi AI, combining AI-generated structure and responsive design with my own tweaks for functionality and style.</p>
                     <div class="project-links">
                         <a href="https://tekmbloggenie.netlify.app/" class="btn">Live Demo</a>
                         <a href="https://github.com/TeKm100/TekmBlogGennie.git" class="btn-outline">Code</a>
