--- a/index.html
+++ b/index.html
@@ -143,9 +143,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card">
+                <img src="Images/blogAi.png" alt="Project 4">
+                <div class="project-info">
+                    <h3>ChatBot </h3>
+                    <p></p>
+                    <div class="project-links">
+                        <a href="https://legendary-hotteok-432747.netlify.app/" class="btn">Live Demo</a>
+                        <a href="https://github.com/TeKm100/Successful-Chatbot.git" class="btn-outline">Code</a>
+                    </div>
+                </div>
+            </div>
+
             
             <div class="project-card">
-                   <img src="Images/project4.png" alt="Project 4">
+                   <img src="Images/project4.png" alt="Project 5">
                    <div class="project-info">
                        <h3>AI Landing Page</h3>
                        <p>AI Landing Page with HTML, CSS & JavaScript | Modern UI, Animations & Parallax Effects!</p>
