--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
             </div>
 
             <div class="project-card">
-                <img src="Images/blogAi.png" alt="Project 4">
+                <img src="Images/" alt="Project 4">
                 <div class="project-info">
                     <h3>ChatBot </h3>
-                    <p></p>
+                    <p>As a software development intern, I collaborated with a team to build and deploy a chatbot using the Gemini API.</p>
                     <div class="project-links">
                         <a href="https://legendary-hotteok-432747.netlify.app/" class="btn">Live Demo</a>
                         <a href="https://github.com/TeKm100/Successful-Chatbot.git" class="btn-outline">Code</a>
