--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="project-card">
-                <img src="Images/chatbotgemini.jpg" alt="Project 4">
+                <img src="Images/chatbot.png" alt="Project 4">
                 <div class="project-info">
                     <h3>ChatBot </h3>
                     <p>As a software development intern, I collaborated with a team to build and deploy a chatbot using the Gemini API.</p>
