--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <img src="Images/chatbot.png" alt="Project 4">
                 <div class="project-info">
                     <h3>ChatBot </h3>
-                    <p>As a software development intern, I collaborated with a team to build and deploy a chatbot using the Gemini API.</p>
+                    <p>As a software intern, I worked with a team to build and deploy a chatbot using the Gemini API.</p>
                     <div class="project-links">
                         <a href="https://legendary-hotteok-432747.netlify.app/" class="btn">Live Demo</a>
                         <a href="https://github.com/TeKm100/Successful-Chatbot.git" class="btn-outline">Code</a>
