added skill and cv

--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
                     <div class="progress-bar">
                         <div class="progress" style="--progress-width: 80%"></div>
                     </div>
-
                 </div>
                 <div class="skill">
                     <span>JavaScript</span>
                     <div class="progress-bar">
                         <div class="progress" style="--progress-width: 65%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <span>Git & Github</span>
+                    <div class="progress-bar">
+                        <div class="progress" style="--progress-width: 80%"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -88,9 +93,33 @@
                     </div>
                 </div>
                 <div class="skill">
+                    <span>Typescript</span>
+                    <div class="progress-bar">
+                        <div class="progress" style="--progress-width: 40%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <span>Tailwind CSS</span>
+                    <div class="progress-bar">
+                        <div class="progress" style="--progress-width: 55%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <span>Sass(css)</span>
+                    <div class="progress-bar">
+                        <div class="progress" style="--progress-width: 30%"></div>
+                    </div>
+                </div>
+                <div class="skill">
                     <span>AI & Tools</span>
                     <div class="progress-bar">
                         <div class="progress" style="--progress-width: 75%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <span>Api integration</span>
+                    <div class="progress-bar">
+                        <div class="progress" style="--progress-width: 40%"></div>
                     </div>
                 </div>
             </div>
@@ -148,7 +177,7 @@
                 <img src="Images/chatbot.png" alt="Project 4">
                 <div class="project-info">
                     <h3>ChatBot </h3>
-                    <p>As a software intern, I worked with a team to build and deploy a chatbot using the Gemini API.</p>
+                    <p>As a software development intern, I worked with a team to build and deploy a chatbot using the Gemini API.</p>
                     <div class="project-links">
                         <a href="https://legendary-hotteok-432747.netlify.app/" class="btn">Live Demo</a>
                         <a href="https://github.com/TeKm100/Successful-Chatbot.git" class="btn-outline">Code</a>
@@ -202,6 +231,7 @@
                 <p><i class="fas fa-map-marker-alt"></i> Nasarawa, NIGERIA</p>
                 
                 <div class="social-links">
+                    <a href="documents/Tolulope-CV.pdf" download="Tolulope-CV.pdf" style=" color:#e63946; text-decoration:none;">Download CV</a><br>
                     <a target="_blank" href="https://github.com/TeKm100"><i class="fab fa-github"></i></a>
                     <a target="_blank" href="www.linkedin.com/in/tolulope-kazeem-794a31293"><i class="fab fa-linkedin"></i></a>
                     <a target="_blank" href="https://x.com/programmer_1001"><i class="fab fa-twitter"></i></a>
